shaku_derive/tests/ui/submodule_service_attributes.stderr
error: Submodule components cannot have attributes
  --> $DIR/submodule_service_attributes.rs:31:27
   |
31 |             components = [#[lazy] ComponentTrait],
   |                           ^

error: Submodule providers cannot have attributes
  --> $DIR/submodule_service_attributes.rs:44:26
   |
44 |             providers = [#[lazy] ProviderTrait]
   |                          ^
